--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>Hihi</h1>
+    <h1 class = "displayer">Hihi</h1>
 
     <div class="container">
         <button class="square topLeft"></button>
@@ -20,6 +20,13 @@
         <button class="square bottomLeft"></button>
         <button class="square bottomMid"></button>
         <button class="square bottomRight"></button>
+    </div>
+
+    <button class = "restartGame">Restart Game</button>
+
+    <div class="sliderGame">
+        <h1 class="title">Tic-tac-Toe</h1>
+        <button class="play">Play Game</button>
     </div>
 
 
